--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <tr>
                         <td>
                             <img src="img/email-branco.png"><br>
-                            <a href="mailto:contato@email.com">coufilho@hotmail.com</a>
+                            <a href="contato@email.com">coufilho@hotmail.com</a>
                         </td>
                         <td class="bg-green">
                             <img src="img/localizacao-branco.png"><br>
